chrome ctrl+f 스타일로 css, js 코드수정

--- a/popup.html
+++ b/popup.html
@@ -6,19 +6,24 @@
     <script defer src="./js/popup.js"></script>
   </head>
   <body>
-    <div id="searchGroup">
-      <label>초성검색</label>
-      <input id="searchInput" placeholder="초성을 입력해주세요">
+    <div id="searchBarContainer">
+      <div class="searchBarInputContainer">
+        <input class="searchBarInput" name="query" type="text" />
+        <span class="searchBarCounter">
+          <p id="current">0</p>
+          <p id="slash">/</p>
+          <p id="total">0</p>
+        </span>
+        
+        <div class="searchBarTool">
+          <span id="prevBtn">&and;</span>
+          <span id="nextBtn">&or;</span>
+          <span id="closeSearchBar" class="searchBarClose">&#x292C;</span>
+        </div>
+      </div>
+      
     </div>
-    <div id="btnGroup">
-      <button id="prevBtn">Prev</button>
-      <button id="nextBtn">Next</button>
-    </div>
-    <div id="outputGroup">
-      <p id="current">0</p>
-      <p id="slash">/</p>
-      <p id="total">0</p>
-    </div>
+
     <div id="highLight"></div>
   </body>
 </html>
