Enter 또는 ArrowDown 키 입력시 nextBtn 클릭, ArrowUp 키 입력시 prevBtn 클릭 함수호출

--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
         <div class="searchBarTool">
           <span id="prevBtn">&and;</span>
           <span id="nextBtn">&or;</span>
-          <span id="closeSearchBar" class="searchBarClose">&#x292C;</span>
+          <span id="closeBtn" class="searchBarClose">&#x292C;</span>
         </div>
       </div>
       
